--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 *,
 *::after,
 *::before {
@@ -8,13 +11,8 @@
 }
 html,
 body {
+  @apply  bg-red-200 text-white flex items-center justify-center w-full;
   font-family: sans-serif;
-  background-color: #0d0d0d;
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100vw;
 }
 .button {
   cursor: pointer;
@@ -57,7 +55,7 @@ body {
   padding: 40px;
 }
 .todohero_section {
-  border: 1px solid #c2b39a;
+  border: 1px solid #E1F8EE;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -68,7 +66,7 @@ body {
   border-radius: 11px;
 }
 .todohero_section div:last-child {
-  background-color: #88ab33;
+  background-color: #f6f6d9;
   width: 150px;
   height: 150px;
   border-radius: 75px;
@@ -91,8 +89,8 @@ body {
   width: 90%;
 }
 .form input {
-  background-color: #1f2937;
-  color: #fff;
+  background-color: #385276;
+  color: ffff ;
   width: 100%;
   height: 50px;
   outline: none;
@@ -101,6 +99,7 @@ body {
   padding: 12px;
 }
 .form button {
+ 
   width: 10%;
   height: 50px;
   border-radius: 11px;
@@ -123,13 +122,12 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 70px;
+  height: 50px;
   width: 100%;
   max-width: 455px;
-  border: 1px solid #c2b39a;
   font-size: 16px;
-  background-color: #0d0d0d;
-  color: #fff;
+  background-color: #fefdf2;
+  color: #c2b39a ;
   padding: 12px;
 }
 .edit-form input {
@@ -142,12 +140,12 @@ body {
 .todo_items_right {
   display: flex;
   align-items: center;
+  border: #fff;
 }
 .todo_items_left {
-  background-color: transparent;
-  border: none;
-  color: #fff;
-  gap: 12px;
+  border: gray;
+  color: #3c4049;
+  gap: 10px;
   font-size: 16px;
 }
 .todo_items_right {
