--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -11,7 +11,7 @@
 }
 html,
 body {
-  @apply  bg-red-200 text-white flex items-center justify-center w-full;
+  @apply bg-red-200 text-white flex items-center justify-center w-full;
   font-family: sans-serif;
 }
 .button {
@@ -55,7 +55,7 @@ body {
   padding: 40px;
 }
 .todohero_section {
-  border: 1px solid #E1F8EE;
+  border: 1px solid #e1f8ee;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -90,7 +90,7 @@ body {
 }
 .form input {
   background-color: #385276;
-  color: ffff ;
+  color: ffff;
   width: 100%;
   height: 50px;
   outline: none;
@@ -99,24 +99,13 @@ body {
   padding: 12px;
 }
 .form button {
- 
   width: 10%;
   height: 50px;
   border-radius: 11px;
   background-color: #88ab33;
   border: none;
 }
-.todo_list {
-  align-self: center;
-  width: 97%;
-  max-width: 455px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 27px;
-  margin-bottom: 27px;
-  gap: 27px;
-}
+
 .todo_item,
 .edit-form input {
   display: flex;
@@ -127,7 +116,7 @@ body {
   max-width: 455px;
   font-size: 16px;
   background-color: #fefdf2;
-  color: #c2b39a ;
+  color: #c2b39a;
   padding: 12px;
 }
 .edit-form input {
